reject ipv4 strings with an octet with a leading zero
see https://sick.codes/universal-netmask-npm-package-used-by-270000-projects-vulnerable-to-octal-input-data-server-side-request-forgery-remote-file-inclusion-local-file-inclusion-and-more-cve-2021-28918/
and https://blog.urth.org/2021/03/29/security-issues-in-perl-ip-address-distros/

--- a/Changes
+++ b/Changes
@@ -8,6 +8,8 @@ Revision history for JSON-Schema-Draft201909
             values).
           - more validity checks at traversal time of $ref, $schema,
             $vocabulary values
+          - update ipv4 format validation to reject leading zeroes in octets,
+            helping avoid a newly-discovered vulnerability in netmasks
 
 0.024     2021-03-23 21:53:42Z
           - the default value for "validate_formats" is once again false (it
